#/******************************************************************
#
#
#  Copyright(C) 2020, Institute for Defense Analyses
#  4850 Mark Center Drive, Alexandria, VA; 703-845-2500
# 
#
#  All rights reserved.
#  
#   This file is a part of Bale.  For license information see the
#   LICENSE file in the top level directory of the distribution.
#  
# 
# *****************************************************************/ 
[package]
name = "toposort"
version = "0.1.0"
authors = ["wwc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
serde = { version = "1.0", features = ["derive"] }

[dependencies.spmat]
path = "../spmat"

[dependencies.convey_hpc]
path = "../../../../../convey_private"
