#/******************************************************************
#
#
#  Copyright(C) 2020, Institute for Defense Analyses
#  4850 Mark Center Drive, Alexandria, VA; 703-845-2500
# 
#
#  All rights reserved.
#  
#   This file is a part of Bale.  For license information see the
#   LICENSE file in the top level directory of the distribution.
#  
# 
# *****************************************************************/ 
[package]
name = "delta_stepping"
version = "0.1.0"
authors = ["John R. Gilbert <gilbert@cs.ucsb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2"
chrono="0.4.15"
itertools="0"
regex="1"

[dependencies.sparsemat]
path = "../sparsemat"

