[package]
name = "shmem"
version = "0.1.0"
authors = ["Bill Carlson <wwc559@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
shmem-sys = { path="../shmem-sys" }

[dev-dependencies]
rand="0.7"
clap="2"